[package]
name = "citation"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
maud = "0.26.0"
axum = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tower = { version = "0.5.1", features = ["util"] }
reqwest = { workspace = true }

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
